<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_field_title"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/main_btn_easy"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:fontFamily="sans-serif"
        android:scrollHorizontally="false"
        android:text="@string/txt_btn_easy"
        android:textAlignment="center"
        android:textSize="@dimen/dimens_medium"
        android:textStyle="bold"
        app:backgroundTint="@color/color_easy" />

    <Button
        android:id="@+id/main_btn_traditionnal"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_btn_tradionnal"
        android:textSize="@dimen/dimens_medium"
        android:textStyle="bold"
        app:backgroundTint="@color/color_traditional"
        app:strokeColor="#FFFFFF" />

    <Button
        android:id="@+id/main_btn_season"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_btn_season"
        android:textSize="@dimen/dimens_medium"
        android:textStyle="bold"
        app:backgroundTint="@color/color_seasonal" />

    <Button
        android:id="@+id/main_btn_gluten"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_btn_freeGluten"
        android:textSize="@dimen/dimens_medium"
        android:textStyle="bold"
        app:backgroundTint="@color/color_freeGluten" />


</LinearLayout>