<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EquipeActivity">

    <TextView
        android:id="@+id/equipe_txtView_title"
        android:layout_width="103dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:text="@string/equipe_txtView_title"
        android:textAlignment="center"
        android:textSize="@dimen/dimens_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="403dp"
        android:layout_height="79dp"
        android:layout_marginTop="36dp"
        android:text="@string/equipe_txtView_thanks"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equipe_txtView_title" />

    <ImageView
        android:id="@+id/equipe_umage_erik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/erik"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/erik" />

    <TextView
        android:id="@+id/equipe_txtView_erik"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/equipe_Erik"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/equipe_umage_erik"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/equipe_image_ahmed"
        android:layout_width="80dp"
        android:layout_height="84dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/ahmed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/equipe_umage_erik"
        app:srcCompat="@drawable/ahmed" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="84dp"
        android:text="@string/equipe_ahmed"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toEndOf="@+id/equipe_image_ahmed"
        app:layout_constraintTop_toBottomOf="@+id/equipe_txtView_erik" />
</androidx.constraintlayout.widget.ConstraintLayout>