<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <TextView
        android:id="@+id/contact_txtView_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/contact_txtView_Title"
        android:textSize="@dimen/dimens_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contact_txtView_name"
        android:layout_width="124dp"
        android:layout_height="18dp"
        android:layout_marginTop="40dp"
        android:text="@string/contact_txtView_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_txtView_Title" />

    <TextView
        android:id="@+id/contact_txtView_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/contact_txtView_tel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_txtView_name" />

    <TextView
        android:id="@+id/contact_txtView_email"
        android:layout_width="212dp"
        android:layout_height="22dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="60dp"
        android:text="@string/contact_txtView_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/contact_txtView_tel"
        app:layout_constraintTop_toBottomOf="@+id/contact_txtView_name" />

    <TextView
        android:id="@+id/contact_txtView_linkPortfolio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autoLink="web"
        android:text="@string/contact_linkPortfolio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="377dp"
        android:layout_height="111dp"
        android:layout_marginTop="88dp"
        android:text="@string/contact_presentation"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_txtView_email" />

</androidx.constraintlayout.widget.ConstraintLayout>