<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProjectActivity">

    <TextView
        android:id="@+id/project_txtView_title"
        android:layout_width="144dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:text="@string/project_title"
        android:textAlignment="center"
        android:textSize="@dimen/dimens_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/project_txtView_content"
        android:layout_width="343dp"
        android:layout_height="230dp"
        android:layout_marginTop="20dp"
        android:text="@string/project_content"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_txtView_subtitleCompany" />

    <TextView
        android:id="@+id/project_txtView_subtitle"
        android:layout_width="193dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/project_subtitle"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_txtView_content" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="333dp"
        android:layout_height="116dp"
        android:layout_marginTop="20dp"
        android:text="@string/project_context"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_txtView_subtitle" />

    <TextView
        android:id="@+id/project_txtView_subtitleCompany"
        android:layout_width="119dp"
        android:layout_height="21dp"
        android:layout_marginTop="30dp"
        android:text="@string/porject_company"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_txtView_title" />
</androidx.constraintlayout.widget.ConstraintLayout>