<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxHeight="150dp">

    <ImageView
        android:id="@+id/line_recipe_imageView_recipe"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/line_recipe_ImageView_recipe"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/line_recipe_txtView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/line_recipe_txtView_title"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/line_recipe_imageView_recipe"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/line_recipe_txtView_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/line_recipe_txtView_author"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/line_recipe_imageView_recipe"
        app:layout_constraintTop_toBottomOf="@+id/line_recipe_txtView_title"
        app:layout_constraintVertical_bias="0.133" />

    <ImageView
        android:id="@+id/line_recipe_imageView_star"
        android:layout_width="165dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/line_recipe_imageView_recipe"
        app:layout_constraintTop_toBottomOf="@+id/line_recipe_txtView_author"
        app:srcCompat="@drawable/star_1" />
</androidx.constraintlayout.widget.ConstraintLayout>